--- a/sitemap.html
+++ b/sitemap.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" conent="Patrick Zender" />
     <meta
-      name="Home"
+      name="Sitemap"
       content="The PZ consulting website is a personal site for Patrick Zender and his consulting services.."
     />
-    <title>Home - PZ Consulting</title>
+    <title>Sitemap - PZ Consulting</title>
     <style>
       /* General Page Formatting */
       p {
