--- a/sitemap.html
+++ b/sitemap.html
@@ -21,6 +21,13 @@
         width: auto;
         color: #12343b;
       }
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 3em;
+        text-align: center;
+        width: auto;
+        color: #12343b;
+      }
 
       a:link {
         color: #2d545e;
@@ -115,6 +122,18 @@
         text-decoration: none;
         color: white;
       }
+
+      /*--- Default CSS Above /\ --- */
+
+      #linkslist {
+        text-indent: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.2em;
+        text-indent: 2%;
+        text-align: left;
+        width: auto;
+        color: #12343b;
+      }
     </style>
   </head>
   <body>
@@ -134,7 +153,16 @@
       </div>
     </div>
 
-    <p>TEXT CONTENT HERE</p>
+    <h1>Sitemap</h1>
+
+    <ul id="linkslist">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="allaboutme.html">All About Me</a></li>
+      <li><a href="book.html">Bookings</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="valueprop.html">Value Proposition</a></li>
+      <li><a href="faqs.html">FAQs & Contact Page</a></li>
+    </ul>
 
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
@@ -142,6 +170,6 @@
       <a href="faqs.html">&nbsp Contact Us &nbsp</a>
     </div>
 
-    <p id="copyright">Patrick Zender 2022 ©.</p>
+    <p id="copyright">Patrick Zender 2023 ©</p>
   </body>
 </html>
