--- a/services.html
+++ b/services.html
@@ -21,6 +21,13 @@
         width: auto;
         color: #12343b;
       }
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 3em;
+        text-align: center;
+        width: auto;
+        color: #12343b;
+      }
 
       a:link {
         color: #2d545e;
@@ -115,6 +122,8 @@
         text-decoration: none;
         color: white;
       }
+
+      /*--- Default CSS Above /\ --- */
     </style>
   </head>
   <body>
@@ -142,6 +151,6 @@
       <a href="faqs.html">&nbsp Contact Us &nbsp</a>
     </div>
 
-    <p id="copyright">Patrick Zender 2022 ©.</p>
+    <p id="copyright">Patrick Zender 2023 ©</p>
   </body>
 </html>
