--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -123,6 +124,10 @@
         color: white;
       }
       /*--- Default CSS Above /\ --- */
+      .image {
+display: flex;
+justify-content: center;
+}
     </style>
   </head>
   <body>
@@ -141,7 +146,7 @@
         <a href="faqs.html">&nbsp FAQs &nbsp</a>
       </div>
     </div>
-
+<div id="image"><img src="" alt=""></div>
     <p>TEXT CONTENT HERE</p>
 
     <div class="bottomlinks">
