added images and video

--- a/faqs.html
+++ b/faqs.html
@@ -188,6 +188,16 @@
         flex: 50%;
         padding: 10px;
       }
+      #image {
+        margin: 1em;
+        display: flex;
+        justify-content: center;
+      }
+
+      img {
+        height: 450px;
+        width: 1350px;
+      }
     </style>
   </head>
   <body>
@@ -207,6 +217,14 @@
       </div>
     </div>
     <hr />
+    <div id="image">
+      <img
+        src="images/feedbackandquestions.png"
+        alt="feedback and questions"
+        title="feedback and questions"
+      />
+    </div>
+
     <!-- Grid used below \/ -->
     <div class="row">
       <div class="columnone" style="background-color: #c89666">
