--- a/index.html
+++ b/index.html
@@ -124,10 +124,16 @@
         color: white;
       }
       /*--- Default CSS Above /\ --- */
-      .image {
-display: flex;
-justify-content: center;
-}
+      #image {
+        margin: 1em;
+        display: flex;
+        justify-content: center;
+      }
+
+      img {
+        height: 60%;
+        width: 60%;
+      }
     </style>
   </head>
   <body>
@@ -146,7 +152,13 @@ justify-content: center;
         <a href="faqs.html">&nbsp FAQs &nbsp</a>
       </div>
     </div>
-<div id="image"><img src="" alt=""></div>
+    <div id="image">
+      <img
+        src="images/consulting.jpg"
+        alt="consultation in progress"
+        title="consulting"
+      />
+    </div>
     <p>TEXT CONTENT HERE</p>
 
     <div class="bottomlinks">
