--- a/allaboutme.html
+++ b/allaboutme.html
@@ -125,6 +125,16 @@
       }
 
       /*--- Default CSS Above /\ --- */
+      #image {
+        margin: 1em;
+        display: flex;
+        justify-content: center;
+      }
+
+      img {
+        height: 450px;
+        width: 450px;
+      }
     </style>
   </head>
   <body>
@@ -143,8 +153,30 @@
         <a href="faqs.html">&nbsp FAQs &nbsp</a>
       </div>
     </div>
-
-    <p>TEXT CONTENT HERE</p>
+    <h1>About Me</h1>
+    <div id="image">
+      <img
+        src="images/patrickzender.jpg"
+        alt="Patrick Zender"
+        title="Patrick Zender"
+      />
+    </div>
+    <p>
+      I have years of experience as a consultant and can help businesses with
+      things like strategy, management, finance, human resources, and
+      technology. I understand how complex the business world can be, but I can
+      help clients navigate it with ease.
+    </p>
+    <p>
+      What sets me apart as a great consultant is my ability to work closely
+      with clients to understand their needs and goals. I take a collaborative
+      approach and develop customized solutions that are tailored to their
+      specific needs. I have strong analytical skills and can quickly identify
+      opportunities for improvement. I also have excellent communication skills
+      and can explain complex concepts in a way that is easy to understand. My
+      passion for delivering high-quality work and commitment to results make me
+      a consultant clients can rely on.
+    </p>
 
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
