--- a/index.html
+++ b/index.html
@@ -159,7 +159,18 @@
         title="consulting"
       />
     </div>
-    <p>TEXT CONTENT HERE</p>
+    <p>
+      Welcome to my website! As a consultant, I help businesses of all sizes and
+      industries overcome challenges, seize opportunities, and achieve their
+      goals. With years of experience working with clients across various
+      sectors, I bring a unique perspective and a wealth of expertise to every
+      project. Whether you need help with strategy, management, finance, human
+      resources, or technology, I have the skills and knowledge to help you
+      succeed. I am committed to providing customized solutions tailored to your
+      specific needs and working closely with you every step of the way. Browse
+      my website to learn more about the services I offer and how I can help
+      your business grow and thrive.
+    </p>
 
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
