--- a/services.html
+++ b/services.html
@@ -130,8 +130,22 @@
         display: flex;
         justify-content: center;
       }
-      
-
+      h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2em;
+        text-align: center;
+        width: auto;
+        color: #12343b;
+      }
+      ol {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 1em;
+        padding: 10px 10px;
+        font-size: 1.2em;
+        text-align: left;
+        width: auto;
+        color: #12343b;
+      }
     </style>
   </head>
   <body>
@@ -150,11 +164,56 @@
         <a href="faqs.html">&nbsp FAQs &nbsp</a>
       </div>
     </div>
-<h1>First Off, What is Consulting?</h1>
-<div id="video"><iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=3wPeND2gvqc">
-</iframe></div>
-    <p>TEXT CONTENT HERE</p>
+    <h1>First Off, What is Consulting?</h1>
+    <div id="video">
+      <iframe
+        width="420"
+        height="315"
+        src="https://www.youtube.com/watch?v=3wPeND2gvqc"
+      >
+      </iframe>
+    </div>
+
+    <h2>
+      As a consultant, I can offer a range of services depending on my expertise
+      and the needs of my clients. Here are five examples:
+    </h2>
+    <ol>
+      <li>
+        Strategy consulting: As a strategy consultant, I can help businesses
+        define their long-term goals and develop plans to achieve them. This
+        might involve conducting market research, analyzing data, and working
+        with company leaders to identify opportunities and challenges.
+      </li>
+      <li>
+        Management consulting: Management consultants help companies improve
+        their operational efficiency and effectiveness. This can involve
+        analyzing workflows, identifying areas for improvement, and providing
+        recommendations to help businesses streamline their processes.
+      </li>
+      <li>
+        Financial consulting: Financial consultants help businesses manage their
+        finances by providing guidance on budgeting, forecasting, and investment
+        strategies. This can involve analyzing financial statements, identifying
+        areas for cost savings, and developing financial models to support
+        decision-making.
+      </li>
+      <li>
+        Human resources consulting: Human resources consultants help businesses
+        manage their workforce by developing strategies for recruiting,
+        training, and retaining employees. This might involve conducting
+        employee surveys, analyzing company culture, and developing programs to
+        improve employee engagement and satisfaction.
+      </li>
+      <li>
+        Technology consulting: Technology consultants help businesses optimize
+        their use of technology by identifying opportunities to streamline
+        workflows, improve data management, and develop new products or
+        services. This might involve conducting software audits, analyzing IT
+        infrastructure, and developing customized solutions to meet business
+        needs.
+      </li>
+    </ol>
 
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
