--- a/faqs.html
+++ b/faqs.html
@@ -228,7 +228,7 @@
     <!-- Grid used below \/ -->
     <div class="row">
       <div class="columnone" style="background-color: #c89666">
-        <h1>Questions or Comments? Contact Us!</h1>
+        <h1>Questions or Comments? Connect With Me</h1>
         <!-- Form used Below \/ -->
         <div class="formcontainer">
           <div>
