--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
       <a href="sitemap.html">&nbsp Sitemap &nbsp</a>
-      <a href="faqs.html">&nbsp Contact Us &nbsp</a>
+      <a href="faqs.html">&nbsp Connect With Me &nbsp</a>
     </div>
 
     <p id="copyright">Patrick Zender 2023 ©</p>
