--- a/allaboutme.html
+++ b/allaboutme.html
@@ -18,7 +18,7 @@
         font-family: Arial, Helvetica, sans-serif;
         font-size: 1.2em;
         text-indent: 3%;
-        text-align: left;
+        text-align: center;
         width: auto;
         color: #12343b;
       }
@@ -116,6 +116,29 @@
         color: white;
         cursor: pointer;
       }
+
+      .social-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: auto;
+        margin: 1em;
+      }
+
+      .social-section a {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.2em;
+        padding: 5px;
+        margin: 5px;
+        color: #12343b;
+        text-decoration: none;
+      }
+
+      .social-section a:hover {
+        color: #5bbfd8;
+      }
+
+
       #copyright {
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
@@ -135,6 +158,9 @@
         height: 450px;
         width: 450px;
       }
+
+
+      
     </style>
   </head>
   <body>
@@ -177,6 +203,14 @@
       passion for delivering high-quality work and commitment to results make me
       a consultant clients can rely on.
     </p>
+
+    <h1>Get to know me better</h1>
+    <p>Connect with me on social media to learn more about my background and expertise:</p>
+    <div class="social-section">
+      <a href="https://www.instagram.com/_patrickzender" target="_blank">Instagram</a>
+      <a href="https://www.linkedin.com/in/patrick-zender" target="_blank">LinkedIn</a>
+    </div>
+
 
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
