--- a/faqs.html
+++ b/faqs.html
@@ -25,7 +25,7 @@
       }
       h1 {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 3em;
+        font-size: 2em;
         text-align: center;
         width: auto;
         color: #12343b;
@@ -44,7 +44,7 @@
 
       body {
         margin: 1em;
-        font-size: 1.2em;
+        font-size: 1em;
         width: 100%;
         font-family: Arial, Helvetica, sans-serif;
         background-color: #c89666;
@@ -195,8 +195,8 @@
       }
 
       img {
-        height: 450px;
-        width: 1350px;
+        height: 400px;
+        width: 500px;
       }
     </style>
   </head>
@@ -219,7 +219,7 @@
     <hr />
     <div id="image">
       <img
-        src="images/feedbackandquestions.png"
+        src="images/FAQspic.jpg"
         alt="feedback and questions"
         title="feedback and questions"
       />
@@ -228,7 +228,7 @@
     <!-- Grid used below \/ -->
     <div class="row">
       <div class="columnone" style="background-color: #c89666">
-        <h1>Questions or Comments? Connect With Me</h1>
+        <h1>Questions or Comments? Connect With Me.</h1>
         <!-- Form used Below \/ -->
         <div class="formcontainer">
           <div>
@@ -295,9 +295,24 @@
       <div class="column" style="background-color: #e1b382">
         <div class="columntwo">
           <h1>FAQs</h1>
-          <p>Q1: __? &nbsp &nbsp &nbsp A: ___.</p>
-          <p>Q2: __? &nbsp &nbsp &nbsp A: ___.</p>
-        </div>
+          <p>Question: What types of businesses do you work with? <br><br>
+            Answer: I work with a wide range of businesses, from small startups to large enterprises, across various industries. My expertise in financial, strategy, management, human resources, and technology consulting allows me to tailor my services to meet the unique needs of each client.</p>
+      <br><br>
+            <p>Question: How do you charge for your consulting services? <br><br>
+            Answer: My fees are based on the scope and complexity of the project, as well as the expected duration. I usually offer an initial consultation to discuss the client's needs and provide a customized proposal with a detailed breakdown of costs. I am open to discussing different pricing models, such as hourly rates, fixed fees, or performance-based arrangements, depending on the project and client preferences..</p>
+      <br><br>
+            <p>Question: Can you provide references from previous clients? <br><br>
+            Answer: Absolutely! I understand the importance of trust and confidence in a consultant-client relationship. I am happy to provide references from my previous clients upon request. You can also check my LinkedIn profile for recommendations and endorsements from clients and colleagues.</p>
+      <br><br>
+            <p>Question: How do you ensure the confidentiality of my business information? <br><br>
+            Answer: I take confidentiality very seriously and always treat my clients' information with the utmost care and discretion. I am willing to sign a non-disclosure agreement (NDA) to ensure the protection of your sensitive business information throughout our engagement.</p>
+      <br><br>
+            <p>Question: How do you keep up to date with industry trends and best practices? <br><br>
+            Answer: As an independent consultant, I understand the importance of staying current with industry trends, best practices, and emerging technologies. I regularly attend conferences, participate in professional development courses, and network with industry peers to ensure that my knowledge and skills remain up-to-date and relevant.</p>
+      <br><br>
+            <p>Question: How can I get started with your consulting services? <br><br>
+             Answer: If you are interested in working with me, please get in touch to schedule an initial consultation. During this meeting, we will discuss your business needs, goals, and any challenges you're facing. Based on this conversation, I will provide a customized proposal outlining the scope of work, timeline, and fees for your project. Once we've agreed on the terms, we'll begin our collaboration to help your business grow and succeed.</p>
+            </div>
       </div>
     </div>
     <hr />
