--- a/services.html
+++ b/services.html
@@ -166,9 +166,10 @@
     </div>
     <h1>First Off, What is Consulting?</h1>
     <div id="video">
-      <iframe width="560" height="315" 
-      src="https://www.youtube.com/embed/3wPeND2gvqc" title="YouTube video player" frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/3wPeND2gvqc" title="YouTube video player" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+    </iframe>
 
     </div>
 
