--- a/valueprop.html
+++ b/valueprop.html
@@ -30,6 +30,14 @@
         color: #12343b;
       }
 
+      h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.5em;
+        text-align: left;
+        width: auto;
+        color: #12343b;
+      }
+
       a:link {
         color: #2d545e;
         text-decoration: none;
@@ -86,6 +94,17 @@
         width: 250px;
         margin: 1em;
         display: inline-block;
+
+      }
+      #image {
+        margin: 1em;
+        display: flex;
+        justify-content: center;
+        
+      }
+      img {
+        height: 300px;
+        width: 600px;
       }
 
       /* Bottom of page */
@@ -144,7 +163,47 @@
       </div>
     </div>
 
-    <p>TEXT CONTENT HERE</p>
+    <h1>Value Proposition</h1>
+    <div id="image">
+      <img
+        src="images/valuepropimage.jpg"
+        alt="valueprop"
+        title="Value Proposition"
+      />
+    </div>
+
+    <p>
+      As an independent consultant, my core mission is to empower businesses to unlock their full potential, driving sustainable growth and profitability. With extensive expertise across Financial, Strategy, Management, Human Resources, and Technology consulting, I offer tailored solutions designed to address the unique challenges and opportunities of each client.
+      By partnering with me, you gain access to a wealth of knowledge and experience that will help you identify and overcome the hidden obstacles hindering your business's success. My comprehensive approach enables me to delve deep into your organization, uncovering inefficiencies and providing actionable insights to streamline operations, optimize resource allocation, and maximize ROI.
+      My value proposition is centered on delivering customized, results-driven strategies to foster innovation, increase operational efficiency, and enhance employee engagement. With a keen understanding of the ever-changing business landscape, I leverage cutting-edge technology and industry best practices to ensure your organization stays ahead of the curve.
+      Together, we will build a strong foundation for your business, enabling you to scale effectively and navigate the complexities of the modern marketplace. By entrusting your business to me, you not only invest in your organization's success but also in a partnership dedicated to unlocking your business's true potential.
+    </p>
+
+<br>
+
+    <h2>What other clients have said...</h2>
+    <ul>
+      <li>"Patrick's insights and strategies transformed our company's performance. Highly recommended!" - John Smith, CEO, TechCorp</li>
+   <br>  
+      <li>"Our productivity skyrocketed after implementing Patrick's recommendations. A true game changer!" - Jane Brown, COO, NextGen Solutions</li>
+      <br> 
+      <li>"Working with Patrick was a pleasure. His expertise helped us overcome some significant challenges." - Mark Johnson, CFO, Innovate Inc.</li>
+      <br> 
+      <li>"Patrick's in-depth analysis of our operations led to substantial cost savings and efficiency improvements." - Laura Davis, CTO, GreenTech</li>
+      <br> 
+      <li>"We achieved record-breaking revenue growth after partnering with Patrick. He's a true professional!" - David Wilson, CEO, Growth Agency</li>
+      <br> 
+      <li>"The strategies and tactics Patrick provided enabled us to significantly improve our employee engagement and retention." - Susan Clark, HR Director, OmniGlobal</li>
+      <br> 
+      <li>"Patrick's innovative approach to problem-solving has been invaluable to our organization's success." - Peter Thompson, President, Thompson Industries</li>
+      <br> 
+      <li>"I couldn't be happier with the results of our collaboration. Patrick is an exceptional consultant!" - Emily White, CEO, E-Commerce Empire</li>
+      <br> 
+      <li>"Patrick's ability to analyze and optimize our processes has made a tremendous impact on our bottom line." - Kevin Martinez, COO, Digital World</li>
+      <br> 
+      <li>"Our company has seen continuous growth and improvement since we started working with Patrick. Highly recommended!" - Lisa King, CEO, King Solutions</li>
+    </ul>
+
 
     <div class="bottomlinks">
       <a href="index.html">&nbsp Home &nbsp</a>
